code changes to convert 3 term categories to 2 term categories